Scrollbar stepper correction

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -492,6 +492,7 @@ entry {
     background-color: @theme_base_color;
     background-image: none;
     color: @theme_text_color;
+    caret-color: @theme_text_color;
 }
 
 entry:active,
@@ -1785,11 +1786,13 @@ scrollbar.vertical button.up {
 }
 
 scrollbar.horizontal button.down {
-    -gtk-icon-source: -gtk-icontheme("pan-right-symbolic");
+/*    -gtk-icon-source: -gtk-icontheme("pan-right-symbolic");*/
+    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
 }
 
 scrollbar.horizontal button.up {
-    -gtk-icon-source: -gtk-icontheme("pan-left-symbolic");
+/*    -gtk-icon-source: -gtk-icontheme("pan-left-symbolic");*/
+    -gtk-icon-source: -gtk-icontheme("pan-start-symbolic");
 }
 
 treeview ~ scrollbar.vertical {
@@ -1944,6 +1947,11 @@ filechooser placessidebar list,
 .nautilus-window placessidebar list {
     background-color: transparent;
     color: @sidebar_fg_color;
+}
+
+filechooser placessidebar list label:backdrop,
+.nautilus-window placessidebar list label:backdrop {
+	color: alpha(@sidebar_fg_color, 0.7);
 }
 
 .sidebar row:selected,
